[package]
name = "dir-lock"
version = "0.4.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"
description = "A simple file-system-based mutex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fenhl/rust-dir-lock"

[features]
default = ["tokio"]

[dependencies]
thiserror = "1"

[dependencies.async-std]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["fs", "io-util", "rt-multi-thread", "time"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = ">=0.3.8"
default-features = false
features = ["minwindef", "processthreadsapi", "psapi", "winerror"]
