[package]
name = "dir-lock"
version = "0.4.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"
description = "A simple file-system-based mutex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fenhl/rust-dir-lock"

[features]
default = ["tokio"]

[dependencies]
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
thiserror = "1"

[dependencies.async-std]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["fs", "io-util", "rt-multi-thread", "time"]
